mise a jour de quelques coquilles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>Document</title>
 </head>
 <body>
-		<head>
+		<header>
 			<nav>
 				<ul>
 					<li><a href="./index.html">Home</a></li>
@@ -19,7 +19,7 @@
 					<li><a href="mailto:michael.myscile@gmail.com">Contact</a></li>
 				</ul>
 			</nav>
-		</head>
+		</header>
 		<main>
 			<section id="countdown">
 					<p>Time left to get a training formation</p>
