--- a/social.html
+++ b/social.html
@@ -7,10 +7,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital@0;1&family=Bebas+Neue&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./style.css">
-	<title>socialt</title>
+	<title>Social</title>
 </head>
 <body>
-	<head>
+	<header>
 		<nav>
 			<ul>
 				<li><a href="./index.html">Home</a></li>
@@ -19,7 +19,7 @@
 				<li><a href="mailto:michael.myscile@gmail.com">Contact</a></li>
 			</ul>
 		</nav>
-	</head>
+	</header>
 	<main>
 		<section id="social">
 			<a  class="icon" href="https://www.linkedin.com/in/michaël-myscile" target="_blank" ><img src="./img/linkedin.svg" alt=""></a>
