--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 	<title>About Me</title>
 </head>
 <body>
-	<head>
+	<header>
 		<nav>
 			<ul>
 				<li><a href="./index.html">Home</a></li>
@@ -19,7 +19,7 @@
 				<li><a href="mailto:michael.myscile@gmail.com">Contact</a></li>
 			</ul>
 		</nav>
-	</head>
+	</header>
 	<main>
 		<section id="aboutme">
 			<p>Hello, I'm Michael Myscile but you can also find me as <a href="https://github.com/MidenZer0">MidenZer0 on <img id="github" src="./img/github.webp" alt="">gitHub</a> or <a href="https://x.com/MidenZer0">social networks</a>. You may be wondering why this pseudonym ?  In greek "Miden" means "Zero". Zero is a nod <img width="50" src="./img/eye.apng" alt=""> to the binary code but it also represents the beginning, and in my case a fresh start in my journey to becoming a web developer.<img width="50" src="./img/globe.apng" alt="">. <br><br> I'm currently learning to code <img width="50" src="./img/command_line.anpg" alt=""> by myself and I hope to get a traning formation very soon. I'm a fashion <img width="50" src="./img/camera.apng" alt=""> fan  with a high sensitivity to all forms of design.  <img width="50" src="./img/pen.apng" alt=""> <br>I hope you enjoy this website.  </p>
