MaJ fontsize Nav, width Aboutme, transition on scale

--- a/social.html
+++ b/social.html
@@ -15,7 +15,7 @@
 			<ul>
 				<li><a href="./index.html">Home</a></li>
 				<li><a href="./aboutme.html">About me</a></li>
-				<li><a href="./social.html">Social</a></li>
+				<li class="active"><a href="./social.html" class="active">Social</a></li>
 				<li><a href="mailto:michael.myscile@gmail.com">Contact</a></li>
 			</ul>
 		</nav>
