--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header>
 			<nav>
 				<ul>
-					<li><a href="./index.html">Home</a></li>
+					<li class="active"><a href="./index.html" class="active">Home</a></li>
 					<li><a href="./aboutme.html">About me</a></li>
 					<li><a href="./social.html">Social</a></li>
 					<li><a href="mailto:michael.myscile@gmail.com">Contact</a></li>
